--- a/public/css/basic.css
+++ b/public/css/basic.css
@@ -23,7 +23,7 @@ header h1{
 }
 
 main {
-    height: 80%; width: 100%;
+    height: 80%; width: 80%;
     margin: 0 10% 0 10%; padding: 20px 0 0 0;
 }
 
@@ -41,4 +41,8 @@ div.message {
 td, th {
     width: 200px;
     text-align: left;
+}
+
+#progress_bar{
+    width: 300px;
 }
